# wanderlust

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  OPEN_SOURCE_LAUNCH.md  README.md  build-real-demo.py  demo-trips.json  pyproject.toml  real_trips.json  screenshot.py
.github/workflows/: test.yml
docs/: index.html
docs/screenshots/: README.md  demo.html
src/wanderlust/: __init__.py  cli.py  clusterer.py  enricher.py  geocoder.py  profiler.py  recommender.py  scanner.py  web.py
tests/: conftest.py  test_cli.py  test_clusterer.py  test_enricher.py  test_geocoder.py  test_profiler.py  test_recommender.py  test_scanner.py  test_web.py
