[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wanderlust"
version = "0.1.0"
description = "Discover your travel history from Apple Photos and get AI-powered holiday recommendations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jon Hammant", email = "jhammant@gmail.com" }
]
keywords = ["travel", "photos", "apple", "recommendations", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "geopy>=2.4",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "folium>=0.15",
    "openai>=1.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
wanderlust = "wanderlust.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
