[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wanderlust"
version = "0.2.0"
description = "Discover your travel history from Apple Photos and get AI-powered holiday recommendations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Jon Hammant", email = "jhammant@gmail.com" }
]
maintainers = [
    { name = "Jon Hammant", email = "jhammant@gmail.com" }
]
keywords = ["travel", "photos", "apple", "recommendations", "ai", "trip-planner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Environment :: Console",
    "Framework :: Flask",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0,<9.0",
    "rich>=13.0,<14.0",
    "geopy>=2.4,<3.0",
    "scikit-learn>=1.3,<2.0",
    "pandas>=2.0,<3.0",
    "folium>=0.15,<0.18",
    "openai>=1.0,<2.0",
    "flask>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "playwright>=1.40,<2.0",
]

[project.scripts]
wanderlust = "wanderlust.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
